# chestny-znak-test-task

./: .gitignore  LICENSE  README.md  pyproject.toml
src/apps/common/: models.py
src/apps/orders/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/apps/orders/management/commands/: seed_demo_data.py
src/apps/orders/migrations/: 0001_initial.py
src/apps/orders/static/admin/js/: order_admin.js
src/apps/orders/static/orders/css/: base.css
src/apps/orders/static/orders/js/: order_create.js  order_list.js
src/apps/orders/templates/orders/: order_create.html  order_detail.html  order_list.html
src/apps/orders/templates/orders/partials/: order_list_items.html
src/apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/templates/users/: login.html  register.html
src/config/: constants.py  settings.py  urls.py
templates/: base.html
